--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>template</title>
-<link rel="stylesheet" href="css/resetcss.css">
-<link rel="stylesheet" href="css/css.css">
-</head>
-<body>
-<div class="one">
-<div class="header">
-<div class="start">
-<p class="b">b</p>
-<p class="b">b</p>
-<p class="b">b</p>
-<p class="b">b</p>
-</div>
-<div class="end">
-<p class="b">b</p>
-</div>
-</div>
-<div class="split1">
-<div class="split11">
-<p class="photo">photo</p>
-</div>
-<div class="split12">
-<p class="dark">text</p>
-<p class="content">text</p>
-<p class="button">button</p>
-</div>
-</div>
-<div class="split2">
-<div class="split21">
-<p class="dark">head</p>
-</div>
-<div class="split22">
-<p class="box">text</p>
-<p class="box">text</p>
-<p class="box">text</p>
-<p class="box">text</p>
-</div>
-</div>
-<div class="footer">
-<p class="text">copyright</p>
-</div>
-</div>
-</body>
+	<head>
+		<title>template</title>
+		<link rel="stylesheet" href="css/resetcss.css">
+		<link rel="stylesheet" href="css/css.css">
+	</head>
+	<body>
+		<div class="one">
+			<div class="header">
+				<div class="start">
+					<div class="b">b</div>
+					<div class="b">b</div>
+					<div class="b">b</div>
+					<div class="b">b</div>
+				</div>
+				<div class="end">
+					<div class="b">b</div>
+				</div>
+			</div>
+			<div class="split1">
+				<div class="split11">
+					<div class="photo">photo</div>
+				</div>
+				<div class="split12">
+					<div class="dark">text</div>
+					<div class="content">text</div>
+					<div class="button">button</div>
+				</div>
+			</div>
+			<div class="split2">
+				<div class="split21">
+					<div class="dark">head</div>
+				</div>
+				<div class="split22">
+					<div class="box">text</div>
+					<div class="box">text</div>
+					<div class="box">text</div>
+					<div class="box">text</div>
+				</div>
+			</div>
+			<div class="footer">
+				<div class="text">copyright</div>
+			</div>
+		</div>
+	</body>
 </html>
